--- a/client/src/styles/layout/sidebar.css
+++ b/client/src/styles/layout/sidebar.css
@@ -7,6 +7,7 @@
   display: grid;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 9999;
 }
 
 .sidebar__top {
@@ -23,10 +24,10 @@
   .sidebar {
     width: 100%;
     min-height: auto;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
-    z-index: 100;
+    z-index: 9999;
     padding: 10px;
     display: flex;
     flex-direction: row;
